@@ -823,8 +823,6 @@ static TwmKeyword keytable[] = {
 	{ "f.circledown",           FKEYWORD, F_CIRCLEDOWN },
 	{ "f.circleup",             FKEYWORD, F_CIRCLEUP },
 	{ "f.colormap",             FSKEYWORD, F_COLORMAP },
-	{ "f.cut",                  FSKEYWORD, F_CUT },
-	{ "f.cutfile",              FKEYWORD, F_CUTFILE },
 	{ "f.deiconify",            FKEYWORD, F_DEICONIFY },
 	{ "f.delete",               FKEYWORD, F_DELETE },
 	{ "f.deleteordestroy",      FKEYWORD, F_DELETEORDESTROY },
@@ -833,7 +831,6 @@ static TwmKeyword keytable[] = {
 	{ "f.downiconmgr",          FKEYWORD, F_DOWNICONMGR },
 	{ "f.downworkspace",        FKEYWORD, F_DOWNWORKSPACE },
 	{ "f.exec",                 FSKEYWORD, F_EXEC },
-	{ "f.file",                 FSKEYWORD, F_FILE },
 	{ "f.fill",                 FSKEYWORD, F_FILL },
 	{ "f.fittocontent",         FKEYWORD, F_FITTOCONTENT },
 	{ "f.focus",                FKEYWORD, F_FOCUS },
